--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                             <a href="https://github.com/tiwut/Tiwut-Launcher/releases/download/python/install-tiwut-launcher.sh" class="btn btn-download">Installer (.sh)</a>
                             <a href="https://github.com/tiwut/Tiwut-Launcher/releases/download/python/uninstall-tiwut-launcher.sh" class="btn btn-download-secondary">Uninstaller (.sh)</a>
                         </div>
-                        <p class="note">Execute the script via: <code>chmod +x install-tiwut-launcher.sh && ./install-tiwut-launcher.sh</code></p>
+                        <p class="note">Execute the script via: <code>chmod +x install-tiwut-launcher.sh && ./install-tiwut-launcher.sh</code><code>sudo apt update && sudo apt install python3-tk</code></p>
                     </div>
 
                 </div>
