--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
       }
     }
     </script>
+    <script src="https://tiwut.de/Script/enforce_https.js" defer></script>
 </head>
 <body>
 
@@ -133,5 +134,6 @@
     </footer>
 
     <script src="script.js"></script>
+    <script src="https://tiwut.de/cookie.notice.js"></script>
 </body>
 </html>
