--- a/index.html
+++ b/index.html
@@ -98,6 +98,21 @@
                     </div>
 
                 </div>
+                <div class="download-grid">
+                    
+                    <div class="platform-card windows-card animate-on-scroll">
+                        <h4>Library URLs</h4>
+                        <p class="tagline">Windows only</p>
+                        <p class="note">Default: <code>http://launcher.tiwut.de/library.tiwut</code></p>
+                    </div>
+
+                    <div class="platform-card linux-card animate-on-scroll" data-animation-delay="100">
+                        <h4>Library URLs</h4>
+                        <p class="tagline">Linux only</p>
+                        <p class="note">Default: <code>http://launcher.tiwut.de/Linux/library.tiwut</code></p>
+                    </div>
+
+                </div>
             </div>
         </section>
 
