--- a/index.html
+++ b/index.html
@@ -96,8 +96,10 @@
                         <p class="note">Install dependencies: <code>sudo apt update && sudo apt install python3-tk</code></p>
                         <p class="note">Execute the script via: <code>chmod +x install-tiwut-launcher.sh && ./install-tiwut-launcher.sh</code></p>
                     </div>
-
                 </div>
+            </div>
+
+            <div class="container">
                 <div class="download-grid">
                     
                     <div class="platform-card windows-card animate-on-scroll">
