--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
                             <a href="https://github.com/tiwut/Tiwut-Launcher/releases/download/python/Tiwut-Launcher-Setup_v1.2.exe" class="btn btn-download">Installer v1.2</a>
                             <a href="https://github.com/tiwut/Tiwut-Launcher/releases/download/python/v1.9-stable.exe" class="btn btn-download-secondary">Portable v1.9</a>
                         </div>
+                        <p class="note">WinGet: <code>winget install --id=Tiwut.TiwutLauncher  -e</code></p>
                         <h4>Library URLs</h4>
                         <p class="note">Default: <code>http://launcher.tiwut.de/library.tiwut</code></p>
                     </div>
